[gd_scene load_steps=9 format=2]

[ext_resource path="res://Entities/Boppie/Boppie.gd" type="Script" id=1]
[ext_resource path="res://Entities/Boppie/Eyes.gd" type="Script" id=2]
[ext_resource path="res://Entities/Boppie/Pupil.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Boppie/VisionRay.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 20.108

[sub_resource type="Curve" id=2]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 3.63638 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.527273 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 1.4, 0, 0, Vector2( 0.204348, 0.409091 ), 0.0, 0.0, 0, 0, Vector2( 0.408696, 0.1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.152993, 0.0, 0, 0 ]

[node name="Boppie" type="KinematicBody2D" groups=[
"Boppie",
]]
self_modulate = Color( 0, 0.827451, 0.913725, 1 )
z_index = 30
input_pickable = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WalkingParticles" type="CPUParticles2D" parent="."]
position = Vector2( -0.629227, -0.353554 )
z_index = -10
amount = 30
local_coords = false
flag_align_y = true
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.44
radial_accel_curve = SubResource( 2 )
damping = 23.77
scale_amount = 2.0
scale_amount_curve = SubResource( 3 )
color = Color( 0.654902, 0.654902, 0.654902, 1 )
hue_variation = 0.01
hue_variation_random = 0.06

[node name="Eyes" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Pupil1" parent="Eyes" instance=ExtResource( 3 )]
position = Vector2( -0.140305, 0.140308 )

[node name="Pupil2" parent="Eyes" instance=ExtResource( 3 )]
position = Vector2( -0.280617, 0.14031 )

[node name="DeathParticles" type="CPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 100
one_shot = true
explosiveness = 1.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 20.0
flag_align_y = true
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 8.2
initial_velocity_random = 1.0
orbit_velocity = 2.0
orbit_velocity_random = 1.0
scale_amount = 3.0
scale_amount_curve = SubResource( 4 )
color = Color( 0.635294, 0.635294, 0.635294, 1 )
hue_variation = -0.03
hue_variation_random = 0.11

[node name="VisionRay" type="RayCast2D" parent="."]
position = Vector2( 0, 0.135612 )
z_index = -5
enabled = true
collide_with_areas = true
script = ExtResource( 4 )

[connection signal="input_event" from="." to="." method="_on_Boppie_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Boppie_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Boppie_mouse_exited"]
